--- a/docs/customize/structure/imports.mdx
+++ b/docs/customize/structure/imports.mdx
@@ -22,49 +22,32 @@ By default, Speakeasy uses an OpenAPI-based naming scheme for the namespaces mod
 
 <Spotlight>
 
-#### !!steps `Components`
+#### !!steps Components
 
 Models generated from components are placed in the `models/components` directory, or the target language idiomatic equivalent.
 
-```yaml ! gen.yaml
-# !focus(3:6)
-sdk/
-├─ models/
-│  ├─ components/
-│  │  ├─ user.ts
-│  │  ├─ drink.ts
-│  │  └─ ...
-│  ├─ operations/
-│  │  ├─ getuser.ts
-│  │  ├─ updateuser.ts
-│  │  ├─ getdrink.ts
-│  │  ├─ updatedrink.ts
-│  │  └─ ...
-│  └─ errors/
-│     ├─ sdkerror.ts
-│     ├─ responseerror.ts
-│     └─ ...
-└─ ...
+```yaml ! sdk-tree.yaml focus=3:6
+!from ./assets/sdk-tree.yaml
 ```
 
 ---
 
-#### !!steps `Operations`
+#### !!steps Operations
 
 Models generated from operations are placed in the `models/operations` directory, or the target language idiomatic equivalent.
 
-```yaml ! gen.yaml
-# !focus(7:12)
+```yaml ! sdk-tree.yaml focus=7:12
+!from ./assets/sdk-tree.yaml
 ```
 
 ---
 
-#### !!steps `Errors`
+#### !!steps Errors
 
 Models that are used in error status codes are placed in the `models/errors` directory (or the idiomatic equivalent for the target language).
 
-```yaml ! gen.yaml
-# !focus(13:16)
+```yaml ! sdk-tree.yaml focus=13:16
+!from ./assets/sdk-tree.yaml
 ```
 
 </Spotlight>
@@ -79,45 +62,31 @@ Models that are used in error status codes are placed in the `models/errors` dir
 
 <Spotlight>
 
-### !!steps `imports`
+### !!steps imports
 
 Customize where path models are generated to and imported from by modifying the configuration in the `gen.yaml` file.
 
 Configuration like what is shown will result in a file structure as above.
 
-```yaml ! gen.yaml
-# !focus(6:13)
-configVersion: 2.0.0
-generation:
-  # ...
-typescript:
-  version: 1.0.0
-  imports:
-    option: openapi
-    paths:
-      callbacks: models/callbacks
-      errors: models/errors
-      operations: models/operations
-      shared: models/components
-      webhooks: models/webhooks
-  # ...
+```yaml ! custom-imports.yaml focus=6:13
+!from ./assets/custom-imports.yaml
 ```
 
 ---
 
-### !!steps `option`
+### !!steps option
 
 The `option` key determines the type of bucketing scheme that is used for the models.
 
 Only `openapi` is currently supported. This will bucket models into `components`, `operations`, `errors`, `callbacks`, and `webhooks` directories.
 
-```yaml ! gen.yaml
-# !focus(7)
+```yaml ! custom-imports.yaml focus=7
+!from ./assets/custom-imports.yaml
 ```
 
 ---
 
-### !!steps `paths`
+### !!steps paths
 
 The `paths` section contains a map of bucket names to paths relative to the root of the generated SDK.
 
@@ -127,8 +96,8 @@ The `paths` section contains a map of bucket names to paths relative to the root
 - `callbacks` refers to models generated for schemas within the `callbacks` section of an operation.
 - `webhooks` refers to models generated from the `webhooks` section of an OpenAPI 3.1 document.
 
-```yaml ! gen.yaml
-# !focus(8:13)
+```yaml ! custom-imports.yaml focus=8:13
+!from ./assets/custom-imports.yaml
 ```
 
 </Spotlight>
@@ -426,7 +395,7 @@ unity:
 │  │  ├─ UpdateUserRequest.cs
 │  │  ├─ UpdateUserResponse.cs
 │  │  ├─ GetDrinkRequest.cs
-│  │  ├─ GetDrinkResponse.cs 
+│  │  ├─ GetDrinkResponse.cs
 │  │  ├─ UpdateDrinkRequest.cs
 │  │  ├─ UpdateDrinkResponse.cs
 │  │  ├─ SDKError.cs
