--- a/docs/languages/typescript/methodology-ts.mdx
+++ b/docs/languages/typescript/methodology-ts.mdx
@@ -146,83 +146,9 @@ Below is a complete example of a shared model created by the TypeScript generato
 
 The `DrinkOrder` type represents the public type the model file exports and what SDK users will work with inside their code.
 
-```typescript ! drinkorder.ts
-// !focus(6:12)
-import { Decimal as Decimal$ } from "../../types";
-import { Customer, Customer$ } from "./customer";
-import { DrinkType, DrinkType$ } from "./drinktype";
-import { z } from "zod";
-
-export type DrinkOrder = {
-    id: string;
-    type: DrinkType;
-    customer: Customer;
-    totalCost: Decimal$ | number;
-    createdAt: Date;
-};
-
-/** @internal */
-export namespace DrinkOrder$ {
-  export type Inbound = {
-    id: string;
-    type: DrinkType;
-    customer: Customer$.Inbound;
-    total_cost: string;
-    created_at: string;
-  };
-
-  export const inboundSchema: z.ZodType<DrinkOrder, z.ZodTypeDef, Inbound> = z
-    .object({
-      id: z.string(),
-      type: DrinkType$,
-      customer: Customer$.inboundSchema,
-      total_cost: z.string().transform((v) => new Decimal$(v)),
-      created_at: z
-        .string()
-        .datetime({ offset: true })
-        .transform((v) => new Date(v)),
-    })
-    .transform((v) => {
-      return {
-        id: v.id,
-        type: v.type,
-        customer: v.customer,
-        totalCost: v.total_cost,
-        createdAt: v.created_at,
-      };
-    });
-
-  export type Outbound = {
-    id: string;
-    type: DrinkType;
-    customer: Customer$.Outbound;
-    total_cost: string;
-    created_at: string;
-  };
-
-  export const outboundSchema: z.ZodType<Outbound, z.ZodTypeDef, DrinkOrder> = z
-    .object({
-      id: z.string(),
-      type: DrinkType$,
-      customer: Customer$.outboundSchema,
-      totalCost: z
-        .union([z.instanceof(Decimal$), z.number()])
-        .transform((v) => `${v}`),
-      createdAt: z.date().transform((v) => v.toISOString()),
-    })
-    .transform((v) => {
-      return {
-        id: v.id,
-        type: v.type,
-        customer: v.customer,
-        total_cost: v.totalCost,
-        created_at: v.createdAt,
-      };
-    });
-}
+```typescript ! drinkorder.ts focus=6:12
+!from ./assets/drinkorder.ts.txt
 ```
-
----
 
 #### !!steps Internal Types
 
@@ -230,40 +156,32 @@ A special namespace accompanies every model and contains the types and schemas f
 
 > The namespace, including types and values in it, isn't intended for use outside the SDK and is marked as `@internal`.
 
-```typescript ! drinkorder.ts
-// !focus(14:15)
-
+```typescript ! drinkorder.ts focus=14:15
+!from ./assets/drinkorder.ts.txt
 ```
 
----
-
-## !!steps
+#### !!steps Inbound
 
 The inbound representation of a model defines the shape of the data received from a server. It is validated and deserialized into the public type above.
 
-```typescript ! drinkorder.ts
-// !focus(16:43)
-
+```typescript ! drinkorder.ts focus=16:43
+!from ./assets/drinkorder.ts.txt
 ```
 
----
-
-## !!steps
+#### !!steps Outbound
 
 The outbound representation of a model defines the shape of the data sent to a server. A user provides a value that satisfies the public type above and the outbound schema serializes it into what the server expects.
 
-```typescript ! drinkorder.ts
-// !focus(45:71)
+```typescript ! drinkorder.ts focus=45:71
+!from ./assets/drinkorder.ts.txt
 ```
 
----
-
-### !!steps Zod Validation
+#### !!steps Zod Validation
 
 All generated models have this overall structure. By pinning the types with runtime validation, Speakeasy gives users a stronger guarantee that the SDK types they work with during development are valid at runtime, otherwise, Speakeasy throws exceptions that fail loudly.
 
 ```typescript ! drinkorder.ts
-
+!from ./assets/drinkorder.ts.txt
 ```
 
 </Spotlight>
