--- a/examples/terraform/merged-entity.mdx
+++ b/examples/terraform/merged-entity.mdx
@@ -1,18 +1,16 @@
 ---
 title: "Creating a Merged Terraform entity"
 description: "Specify how to orchestrate disparate API calls to create, update or delete a single merged entity that is resolved across multiple JSON Schemas in your OpenAPI spec."
-image: "/assets/examples/generic.png"
+image: "/media/examples/generic.png"
 date: 2023-01-26
 authors:
   - name: Ash Godfrey
-  - image_url: "/assets/author-headshots/ash.jpg"
+  - image_url: "/media/author-headshots/ash.jpg"
 tags:
   - Terraform
 is_featured: true
-featured_image: "/assets/examples/generic.png"
+featured_image: "/media/examples/generic.png"
 ---
-
-import { Spotlight } from "@/mdx/components";
 
 # Creating a Merged Terraform Entity
 
@@ -25,14 +23,11 @@ Consider a scenario where managing a `drink` resource requires setting a `visibi
 1. **Create the drink**: Invoke `POST /drink` to create the drink entity.
 2. **Set visibility**: Follow with `POST /drink/{id}/visibility` to configure visibility.
 
-
-<Spotlight>
-
-## !!steps Step 1: Define API Endpoints
+## Step 1: Define API Endpoints
 
 Identify the API endpoints involved in the operation. For instance, creating a `drink` and setting its visibility involves two distinct endpoints:
 
-```yaml ! openapi.yaml
+```yaml openapi.yaml
 # !focus(1:2)
 # !focus(27:28)
 /drinks:
@@ -80,13 +75,11 @@ Identify the API endpoints involved in the operation. For instance, creating a `
         description: OK
 ```
 
----
-
-## !!steps Step 2: Annotate for Execution Order
+## Step 2: Annotate for Execution Order
 
 Mark both operations with annotations. For the operation requiring the `id` parameter, assign an `order` property value greater than the first operation to reflect its dependency on the `id` attribute.
 
-```yaml ! openapi.yaml
+```yaml openapi.yaml
 # !focus(3)
 # !focus(30)
 /drinks:
@@ -136,13 +129,11 @@ Mark both operations with annotations. For the operation requiring the `id` para
         description: OK
 ```
 
----
-
-## !!steps Step 3: Configure Hoisting for Response Unwrapping
+## Step 3: Configure Hoisting for Response Unwrapping
 
 Use `x-speakeasy-entity` annotations to simplify response handling by hoisting, avoiding nested data wrapping.
 
-```yaml ! openapi.yaml
+```yaml openapi.yaml
 # !focus(9)
 # !focus(24)
 # !focus(39)
@@ -196,19 +187,15 @@ Use `x-speakeasy-entity` annotations to simplify response handling by hoisting, 
         description: OK
 ```
 
-</Spotlight>
-
 ## Advanced Example Step-by-Step
 
 When an [x-speakeasy-entity-operation](/docs/terraform/extensions#the-x-speakeasy-entity-operation-annotation) is defined, the request body, parameters, and response bodies of `CREATE` and `READ` operations are considered the root of the Terraform Type Schema.
 
-<Spotlight>
-
-## !!steps Step 1:
+## Step 1:
 
 Adding a `x-speakeasy-entity-operation: Drink#create` annotation marks the `POST /drinks` operation as CREATING a `drink` resource.
 
-```yaml ! openapi.yaml
+```yaml openapi.yaml
 # !focus(3)
   /drinks:
     post:
@@ -237,49 +224,47 @@ Adding a `x-speakeasy-entity-operation: Drink#create` annotation marks the `POST
           $ref: "#/components/responses/APIError"
         default:
           $ref: "#/components/responses/UnknownError"
-components:
-  schemas:
-    Drink:
-      type: object
-      properties:
-        name:
-          description: The name of the drink.
-          type: string
-          examples:
-            - Old Fashioned
-            - Manhattan
-            - Negroni
-        type:
-          $ref: "#/components/schemas/DrinkType"
-        price:
-          description: The price of one unit of the drink in US cents.
-          type: number
-          examples:
-            - 1000 # $10.00
-            - 1200 # $12.00
-            - 1500 # $15.00
-      required:
-        - name
-        - price
-    DrinkType:
-      description: The type of drink.
-      type: string
-      enum:
-        - cocktail
-        - non-alcoholic
-        - beer
-        - wine
-        - spirit
-        - other
+  components:
+    schemas:
+      Drink:
+        type: object
+        properties:
+          name:
+            description: The name of the drink.
+            type: string
+            examples:
+              - Old Fashioned
+              - Manhattan
+              - Negroni
+          type:
+            $ref: "#/components/schemas/DrinkType"
+          price:
+            description: The price of one unit of the drink in US cents.
+            type: number
+            examples:
+              - 1000 # $10.00
+              - 1200 # $12.00
+              - 1500 # $15.00
+        required:
+          - name
+          - price
+      DrinkType:
+        description: The type of drink.
+        type: string
+        enum:
+          - cocktail
+          - non-alcoholic
+          - beer
+          - wine
+          - spirit
+          - other
 ```
 
----
-
-## !!steps Step 2:
+## Step 2:
 
 Parameters, Request Bodies, and Response Bodies (associated with a 2XX status code) are each considered roots of the Terraform Type Schema
 
-```yaml ! openapi.yaml
+```yaml openapi.yaml
 # !focus(4)
 # !focus(11)
 # !focus(15:17)
@@ -311,62 +296,60 @@ Parameters, Request Bodies, and Response Bodies (associated with a 2XX status co
           $ref: "#/components/responses/APIError"
         default:
           $ref: "#/components/responses/UnknownError"
-components:
-  schemas:
-    Drink:
-      type: object
-      properties:
-        name:
-          description: The name of the drink.
-          type: string
-          examples:
-            - Old Fashioned
-            - Manhattan
-            - Negroni
-        type:
-          $ref: "#/components/schemas/DrinkType"
-        price:
-          description: The price of one unit of the drink in US cents.
-          type: number
-          examples:
-            - 1000 # $10.00
-            - 1200 # $12.00
-            - 1500 # $15.00
-      required:
-        - name
-        - price
-    DrinkType:
-      description: The type of drink.
-      type: string
-      enum:
-        - cocktail
-        - non-alcoholic
-        - beer
-        - wine
-        - spirit
-        - other
+  components:
+    schemas:
+      Drink:
+        type: object
+        properties:
+          name:
+            description: The name of the drink.
+            type: string
+            examples:
+              - Old Fashioned
+              - Manhattan
+              - Negroni
+          type:
+            $ref: "#/components/schemas/DrinkType"
+          price:
+            description: The price of one unit of the drink in US cents.
+            type: number
+            examples:
+              - 1000 # $10.00
+              - 1200 # $12.00
+              - 1500 # $15.00
+        required:
+          - name
+          - price
+      DrinkType:
+        description: The type of drink.
+        type: string
+        enum:
+          - cocktail
+          - non-alcoholic
+          - beer
+          - wine
+          - spirit
+          - other
 ```
 
----
-
-## !!steps Step 3
+## Step 3
 
 The Terraform Type Schema merges all 3 of these together, and inferring links between the Operation and the Attributes. Note that similarly named attributes are merged together, and that the `DrinkType` attribute is inferred to be a `DrinkType` enum, rather than a `string`.
 
-```yaml ! derived.yaml
+```yaml derived.yaml
  - create.parameters:
-     type:
-       from: "paths["/drinks"].post.parameters[0]"
-       type: enum
-       enumValues:
-          type: string
-          values:
-            - cocktail
-            - non-alcoholic
-            - beer
-            - wine
-            - spirit
-            - other
+    type:
+      from: "paths["/drinks"].post.parameters[0]"
+      type: enum
+      enumValues:
+        type: string
+        values:
+          - cocktail
+          - non-alcoholic
+          - beer
+          - wine
+          - spirit
+          - other
   - create.requestBody:
       name:
         from: "components.schemas.Drink.properties.name"
@@ -413,13 +396,11 @@ The Terraform Type Schema merges all 3 of these together, and inferring links be
         type: number
 ```
 
----
-
-## !!steps Step 4
+## Step 4
 
 These attributes are then merged together. If any properties conflict in type, an error is raised.
 
-```yaml ! derived.yaml
+```yaml derived.yaml
  - create.requestShard:
      type:
        from: "paths["/drinks"].post.parameters[0]"
@@ -478,14 +459,12 @@ These attributes are then merged together. If any properties conflict in type, a
         type: number
 ```
 
----
-
-## !!steps Step 5
+## Step 5
 
 First, the `type` is taken from the OpenAPI `type`. It is `Optional: true` because it is not `required: true` or `nullable: true`.
 The description is taken from the OpenAPI `description`. The `examples` will be used to generate an example for the documentation
 
-```go ! drink_resource.go
+```go drink_resource.go
 // !focus(6:9)
 func (r *DrinkResource) Schema(ctx context.Context, req resource.SchemaRequest, resp *resource.SchemaResponse) {
   resp.Schema = schema.Schema{
@@ -501,9 +480,7 @@ func (r *DrinkResource) Schema(ctx context.Context, req resource.SchemaRequest, 
 }
 ```
 
----
-
-## !!steps Step 6
+## Step 6
 
 Second, the `drinkType` is taken from the request and response bodies. It's converted to snake case as `drink_type` to follow terraform best-practices.
 
@@ -511,7 +488,7 @@ It is `Optional: true` because it was not a member of the OpenAPI `requiredPrope
 
 A plan validator is added with each of the enum values. This will be used to validate the plan at plan-time.
 
-```go ! drink_resource.go
+```go drink_resource.go
 // !focus(10:21)
 func (r *DrinkResource) Schema(ctx context.Context, req resource.SchemaRequest, resp *resource.SchemaResponse) {
   resp.Schema = schema.Schema{
@@ -540,13 +517,11 @@ func (r *DrinkResource) Schema(ctx context.Context, req resource.SchemaRequest, 
 }
 ```
 
----
-
-## !!steps Step 7
+## Step 7
 
 The other parameters are also pulled in from the request body. Both of them are required, with their type being derived from the equivalent Terraform primitive to their OpenAPI type.
 
-```go ! drink_resource.go
+```go drink_resource.go
 // !focus(22:30)
 func (r *DrinkResource) Schema(ctx context.Context, req resource.SchemaRequest, resp *resource.SchemaResponse) {
   resp.Schema = schema.Schema{
@@ -583,9 +558,7 @@ func (r *DrinkResource) Schema(ctx context.Context, req resource.SchemaRequest, 
 }
 ```
 
----
-
-## !!steps Step 8: Cleanup
+## Step 8: Cleanup
 
 In this API `drinkType` and `type` appear to refer to the same thing. `type` comes from a query parameter, whereas `drinkType` comes from the response body.
 
@@ -597,7 +570,7 @@ To clean up, we have many options we can apply to the API to describe what we wa
 2. `x-speakeasy-match: drinkType` could be applied to the query parameter. This will cause it to always be sent in the request, the same as the `drink_type` property.
 3. `x-speakeasy-name-override: type` could be applied to the `drinkType` property. This will rename it as `type`, and ensure both `drinkType` request body key and `type` query parameter are both always sent.
 
-```go ! drink_resource.go
+```go drink_resource.go
 func (r *DrinkResource) Schema(ctx context.Context, req resource.SchemaRequest, resp *resource.SchemaResponse) {
   resp.Schema = schema.Schema{
     MarkdownDescription: "Drink Resource",
@@ -628,5 +601,3 @@ func (r *DrinkResource) Schema(ctx context.Context, req resource.SchemaRequest, 
   }
 }
 ```
-
-</Spotlight>
