--- a/openapi/arazzo.mdx
+++ b/openapi/arazzo.mdx
@@ -20,7 +20,7 @@ An Arazzo description is a JSON or YAML document that follows the structure defi
 
 <Spotlight>
 
-#### !!steps `arazzo`
+#### !!steps ArazzoDef
 
 | Field Name | Type     | Required |
 | ---------- | -------- | -------- |
@@ -34,7 +34,7 @@ The version of the Arazzo Specification that the document uses. The value must b
 
 ---
 
-#### !!steps `info`
+#### !!steps InfoDef
 
 | Field Name | Type                        | Required |
 | ---------- | --------------------------- | -------- |
@@ -42,13 +42,13 @@ The version of the Arazzo Specification that the document uses. The value must b
 
 Provides metadata about the Arazzo description.
 
-```yaml ! arazzo.yaml
-# !focus(2:8)
+```yaml ! arazzo.yaml focus=2:8
+!from ./assets/arazzo.yaml.txt
 ```
 
 ---
 
-#### !!steps `sourceDescriptions`
+#### !!steps SourceDef
 
 | Field Name           | Type                                                      | Required |
 | -------------------- | --------------------------------------------------------- | -------- |
@@ -56,13 +56,13 @@ Provides metadata about the Arazzo description.
 
 An array of [source description objects](#source-description-object) defining the OpenAPI or other documents containing the operations referenced by the workflows. The array must contain at least one source.
 
-```yaml ! arazzo.yaml
-# !focus(9:15)
+```yaml ! arazzo.yaml focus=9:15
+!from ./assets/arazzo.yaml.txt
 ```
 
 ---
 
-#### !!steps `workflows`
+#### !!steps WorkflowDef
 
 | Field Name  | Type                                  | Required |
 | ----------- | ------------------------------------- | -------- |
@@ -70,8 +70,8 @@ An array of [source description objects](#source-description-object) defining th
 
 An array of [workflow objects](#workflow-object) defining the workflows. The array must contain at least one workflow.
 
-```yaml ! arazzo.yaml
-# !focus(16:156)
+```yaml ! arazzo.yaml focus=16:156
+!from ./assets/arazzo.yaml.txt
 ```
 
 </Spotlight>
