--- a/openapi/frameworks/flask.mdx
+++ b/openapi/frameworks/flask.mdx
@@ -40,7 +40,7 @@ To better understand the process of generating an OpenAPI document with Flask, l
 
 <Spotlight>
 
-## !!steps
+#### !!steps Apps
 
 Open the `app.py` file, which serves as the main entry point of the program, and inspect the main function:
 
@@ -48,10 +48,7 @@ Open the `app.py` file, which serves as the main entry point of the program, and
 !from ./assets/flask/app.py.txt
 ```
 
-
----
-
-## !!steps
+#### !!steps Database
 
 Here, you will see a method call to create a SQLite database and a function to run the Flask app:
 
@@ -59,21 +56,15 @@ Here, you will see a method call to create a SQLite database and a function to r
 !from ./assets/flask/app.py.txt
 ```
 
-
----
-
-## !!steps
+#### !!steps Models
 
 From the root of the repository, open the `models.py` file to see a `Book` model containing a few fields with validation:
 
-```python !! models.py focus=1:8
+```python ! models.py focus=1:8
 !from ./assets/flask/models.py.txt
 ```
 
-
----
-
-## !!steps
+#### !!steps Schemas
 
 In the `schemas.py` file, the `BookSchema` class can be used to serialize and deserialize book data with the `marshmallow` package:
 
@@ -81,14 +72,11 @@ In the `schemas.py` file, the `BookSchema` class can be used to serialize and de
 !from ./assets/flask/schemas.py.txt
 ```
 
-
----
-
-## !!steps
+#### !!steps Resources
 
 The `resources.py` file contains API endpoints set up to handle all the CRUD operations for the books:
 
-```python !! resources.py focus=1:94
+```python ! resources.py focus=1:94
 !from ./assets/flask/resources.py.txt
 ```
 
@@ -118,47 +106,43 @@ pip install flask-smorest
 
 <Spotlight>
 
-## !!steps
+#### !!steps Configuration
 
 The most basic configuration for generating an OpenAPI document with `flask-smorest` is added in the `app.py` file:
 
-```python !! app.py focus=9:12
+```python ! app.py focus=9:12
 !from ./assets/flask/app.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps SwaggerUI
 
 The new Swagger UI endpoint is also added in the `app.py` file:
 
-```python !! app.py focus=14 mark=14
+```python ! app.py focus=14 mark=14
 !from ./assets/flask/app.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps Server
 
 The `app.py` file contains additional configuration settings for the OpenAPI document. These add a development server:
 
-```python !! app.py focus=36:41
+```python ! app.py focus=36:41
 !from ./assets/flask/app.py.txt
 ```
-
 
 ---
 
-## !!steps
+#### !!steps Routes
 
 These additional configuration settings add a route to serve the OpenAPI document:
 
-```python !! app.py focus=44:50
+```python ! app.py focus=44:50
 !from ./assets/flask/app.py.txt
 ```
-
 
 </Spotlight>
 
@@ -192,7 +176,7 @@ This generates a new file, `openapi.yaml`, in the root of the project.
 
 <Spotlight>
 
-## !!steps
+#### !!steps Document
 
 Here, you can see an example of the generated OpenAPI document:
 
@@ -200,21 +184,19 @@ Here, you can see an example of the generated OpenAPI document:
 !from ./assets/flask/openapi.yaml.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps Config
 
 Return to the `app.py` file to see how the app configuration influences the OpenAPI document generation:
 
-```python !! app.py focus=9:15
+```python ! app.py focus=9:15
 !from ./assets/flask/app.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps Metadata
 
 Open the `openapi.yaml` file to see the titles and versions reflected in the generated OpenAPI document:
 
@@ -222,10 +204,9 @@ Open the `openapi.yaml` file to see the titles and versions reflected in the gen
 !from ./assets/flask/openapi.yaml.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps ServerInfo
 
 The server URL is also included in the OpenAPI document:
 
@@ -233,28 +214,25 @@ The server URL is also included in the OpenAPI document:
 !from ./assets/flask/openapi.yaml.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps BookParams
 
 Open the `models.py` file to see the `Book` parameters:
 
-```python !! models.py focus=3:8
+```python ! models.py focus=3:8
 !from ./assets/flask/models.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps SchemaRef
 
 Open the `openapi.yaml`file to check the same `Book` parameters are reflected in the OpenAPI document:
 
 ```yaml ! openapi.yaml focus=15:30
 !from ./assets/flask/openapi.yaml.txt
 ```
-
 
 </Spotlight>
 
@@ -270,7 +248,7 @@ In the [customized](https://github.com/speakeasy-api/openapi-flask-example/tree/
 
 <Spotlight>
 
-## !!steps
+#### !!steps Endpoints
 
 Open the `resources.py` file and inspect the configured endpoints:
 
@@ -278,10 +256,9 @@ Open the `resources.py` file and inspect the configured endpoints:
 !from ./assets/flask/resources.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps Responses
 
 You can indicate the expected response codes and models using `@blp.response()`:
 
@@ -289,21 +266,19 @@ You can indicate the expected response codes and models using `@blp.response()`:
 !from ./assets/flask/resources.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps OpenAPIResponse
 
 This results in the following additions, for example, to the `/books/` `get` operation in the OpenAPI document:
 
-```yaml !! openapi.yaml focus=69:82
+```yaml ! openapi.yaml focus=69:82
 !from ./assets/flask/openapi.yaml.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps Arguments
 
 Use the `@blp.arguments()` decorator to enforce a schema for arguments:
 
@@ -311,21 +286,19 @@ Use the `@blp.arguments()` decorator to enforce a schema for arguments:
 !from ./assets/flask/resources.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps OpenAPIArguments
 
 An enforced arguments schema results in the following additions to the `post` operation:
 
-```yaml !! openapi.yaml focus=96:97
+```yaml ! openapi.yaml focus=96:97
 !from ./assets/flask/openapi.yaml.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps Pagination
 
 Allow pagination with the `@blp.paginate()` decorator:
 
@@ -333,10 +306,9 @@ Allow pagination with the `@blp.paginate()` decorator:
 !from ./assets/flask/resources.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps PaginationQuery
 
 Allowing paginations gives you access to the `page` and `page_size` properties, which you can use in your database query:
 
@@ -344,10 +316,9 @@ Allowing paginations gives you access to the `page` and `page_size` properties, 
 !from ./assets/flask/resources.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps Docstrings
 
 You can add inline documentation using docstrings:
 
@@ -355,21 +326,19 @@ You can add inline documentation using docstrings:
 !from ./assets/flask/resources.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps DocReflection
 
 Docstrings are reflected in the OpenAPI document as follows:
 
-```yaml !! openapi.yaml focus=124
+```yaml ! openapi.yaml focus=124
 !from ./assets/flask/openapi.yaml.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps Comments
 
 Notice the internal comment that is omitted from the OpenAPI document:
 
@@ -377,21 +346,19 @@ Notice the internal comment that is omitted from the OpenAPI document:
 !from ./assets/flask/resources.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps Retries
 
 You can add global retries to the OpenAPI document by modifying the app config in the `app.py` file:
 
-```python !! app.py focus=17:28
+```python ! app.py focus=17:28
 !from ./assets/flask/app.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps SDKRetries
 
 This enables retries when using the document to create an SDK with Speakeasy:
 
@@ -430,7 +397,7 @@ These examples assume a Python SDK named `books-python` was generated from the e
 
 <Spotlight>
 
-## !!steps
+#### !!steps BookClass
 
 Navigate into the `books-python/src/books/models` directory and find the `book.py` file created by Speakeasy. Note how the OpenAPI document was used to create the `Book` class:
 
@@ -438,39 +405,35 @@ Navigate into the `books-python/src/books/models` directory and find the `book.p
 !from ./assets/flask/book.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps SDKMethods
 
 Open the `src/books/books_sdk.py` file to see the methods that call the web API from an application using the SDK:
 
-```python !! books_sdk.py focus=13:104 mark=13
+```python ! books_sdk.py focus=13:104 mark=13
 !from ./assets/flask/books_sdk.py.txt
 ```
 
-
 ---
 
-## !!steps
+#### !!steps Requests
 
 Here, you can see how the request to the API endpoint is built:
 
-```python !! books_sdk.py focus=136:148
+```python ! books_sdk.py focus=136:148
 !from ./assets/flask/books_sdk.py.txt
 ```
-
 
 ---
 
-## !!steps
+#### !!steps RetriesConfig
 
 Finally, note the result of the global retries strategy that we set up in the `app.py` file:
 
-```python !! books_sdk.py focus=154:156
+```python ! books_sdk.py focus=154:156
 !from ./assets/flask/books_sdk.py.txt
 ```
-
 
 </Spotlight>
 
