--- a/openapi/frameworks/gnostic.mdx
+++ b/openapi/frameworks/gnostic.mdx
@@ -48,143 +48,131 @@ Our second endpoint is `getDrink`: Create a new drink based only on the drink's 
 
 <Spotlight>
 
-## !!steps
+#### !!steps ApiExploration
 
 Let's take a detailed tour of our API by exploring `bar.yaml`:
 
-```yaml ! bar.yaml
-!from ./assets/gnostic/bar.yaml
+```yaml ! bar.yaml !from ./assets/gnostic/bar.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps ApiVersion
 
 We'll start by creating an OpenAPI 3.0.0 document. Gnostic, unfortunately, only supports OpenAPI 3.0.0, so we'll have to make sure our document is compliant.
 
-```yaml ! bar.yaml
-# !mark(1)
+```yaml ! bar.yaml focus=1 !from ./assets/gnostic/bar.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps InfoObject
 
 Next, we'll create an info object that describes our API. This object contains the title, version, and description of our API.
 
-```yaml ! bar.yaml
-# !focus(3:6)
+```yaml ! bar.yaml focus=3:6 !from ./assets/gnostic/bar.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps ServersDefinition
 
 Now let's define the servers where our API will be hosted. In this case, we'll have a single server running locally on `http://localhost:8080`.
 
-```yaml ! bar.yaml
-# !focus(8:10)
+```yaml ! bar.yaml focus=8:10 !from ./assets/gnostic/bar.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps CreateDrinkEndpoint
 
 Next, we'll define the `/create-drink` endpoint. This endpoint will accept a POST request with a JSON body containing the ingredients of the drink.
 
-```yaml ! bar.yaml
-# !focus(13:27)
+```yaml ! bar.yaml focus=13:27 !from ./assets/gnostic/bar.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps CreateDrinkResponse
 
 Our `/create-drink` endpoint will return a JSON object with the drink's name, description, recipe, and possibly a photo.
 
-```yaml ! bar.yaml
-# !focus(28:39)
+```yaml ! bar.yaml focus=28:39 !from ./assets/gnostic/bar.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps GetDrinkEndpoint
 
 Next, we'll define the `/get-drink` endpoint. This endpoint will accept a POST request with a JSON body containing the name of the drink.
 
-```yaml ! bar.yaml
-# !focus(47:58)
+```yaml ! bar.yaml focus=47:58 !from ./assets/gnostic/bar.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps GetDrinkResponse
 
 Our `/get-drink` endpoint will return a JSON object with the ingredients, recipe, and possibly a photo of the drink.
 
-```yaml ! bar.yaml
-# !focus(60:79)
+```yaml ! bar.yaml focus=60:79 !from ./assets/gnostic/bar.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps IngredientsRequestComponent
 
 Our first component, `IngredientsRequest`, is a JSON object that contains the ingredients of a drink as an array of strings.
 
-```yaml ! bar.yaml
-# !focus(89:104)
+```yaml ! bar.yaml focus=89:104 !from ./assets/gnostic/bar.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps DrinkResponseComponent
 
 Next up, `DrinkResponse`, is a JSON object that contains the name, description, recipe, and a photo of a drink.
 
-```yaml ! bar.yaml
-# !focus(106:126)
+```yaml ! bar.yaml focus=106:126 !from ./assets/gnostic/bar.yaml
 ```
 
 ---
+
+#### !!steps DrinkNameRequestComponent
 
 The third component, `DrinkNameRequest`, is a JSON object that contains the name of a drink.
 
-```yaml ! bar.yaml
-# !focus(128:137)
+```yaml ! bar.yaml focus=128:137 !from ./assets/gnostic/bar.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps DrinkRecipeResponseComponent
 
 Our fourth component, `DrinkRecipeResponse`, is a JSON object that contains the ingredients, recipe, and a photo of a drink.
 
-```yaml ! bar.yaml
-# !focus(139:156)
+```yaml ! bar.yaml focus=139:156 !from ./assets/gnostic/bar.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps IngredientQuantityComponent
 
 Our fifth component, `IngredientQuantity`, is a JSON object that contains the name and quantity of an ingredient.
 
-```yaml ! bar.yaml
-# !focus(158:169)
+```yaml ! bar.yaml focus=158:169 !from ./assets/gnostic/bar.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps ErrorComponent
 
 Finally, `error` is a JSON object that contains an error code and message.
 
-```yaml ! bar.yaml
-# !focus(171:181)
+```yaml ! bar.yaml focus=171:181 !from ./assets/gnostic/bar.yaml
 ```
 
-## !!steps Setting Up a Development Environment
+#### !!steps DevEnvironment
 
 Here, we'll take an opinionated approach to setting up a development environment. We'll use Docker and dev containers in VS Code to ensure that everyone has the same environment and avoid any issues with dependencies.
 
@@ -192,58 +180,52 @@ We'll start by creating a `Dockerfile` in the `.devcontainer` directory. The `Do
 
 Our development container is based on `mcr.microsoft.com/devcontainers/go` from the Microsoft Dev Container Images repository. The image we'll use has Go version 1.22 and is based on Debian Bookworm.
 
-```docker ! .devcontainer/Dockerfile
-!from ./assets/gnostic/Dockerfile.txt
+```docker ! Dockerfile !from ./assets/gnostic/Dockerfile.txt
 ```
 
 ---
 
-## !!steps
+#### !!steps SpeakeasyInstall
 
 We'll install Speakeasy using the `install.sh` script from the Speakeasy repository.
 
-```docker ! .devcontainer/Dockerfile focus=3
-!from ./assets/gnostic/Dockerfile.txt
+```docker ! Dockerfile focus=3 !from ./assets/gnostic/Dockerfile.txt
 ```
 
 ---
 
-## !!steps
+#### !!steps ToolInstallation
 
 Next, we'll install Gnostic, the Gnostic gRPC plugin, the Go protocol buffer compiler, Buf, the gRPC Go plugin, gRPCurl, and the gRPC gateway plugin.
 
-```docker ! .devcontainer/Dockerfile focus=5:11
-!from ./assets/gnostic/Dockerfile.txt
+```docker ! Dockerfile focus=5:11 !from ./assets/gnostic/Dockerfile.txt
 ```
 
 ---
 
-## !!steps
+#### !!steps ProjectFilesSetup
 
 We'll copy our project files into the container and set the working directory to `/app`.
 
-```docker ! .devcontainer/Dockerfile focus=13:14
-!from ./assets/gnostic/Dockerfile.txt
+```docker ! Dockerfile focus=13:14 !from ./assets/gnostic/Dockerfile.txt
 ```
 
 ---
 
-## !!steps
+#### !!steps DependencyUpdate
 
 We'll run `go mod tidy` to ensure all dependencies are up to date.
 
-```docker ! .devcontainer/Dockerfile focus=16
-!from ./assets/gnostic/Dockerfile.txt
+```docker ! Dockerfile focus=16 !from ./assets/gnostic/Dockerfile.txt
 ```
 
 ---
 
-## !!steps
+#### !!steps PortExposure
 
 Finally, we'll expose port 50051 and run our server.
 
-```docker ! .devcontainer/Dockerfile focus=18:21
-!from ./assets/gnostic/Dockerfile.txt
+```docker ! Dockerfile focus=18:21 !from ./assets/gnostic/Dockerfile.txt
 ```
 
 </Spotlight>
@@ -353,32 +335,29 @@ We depend on `googleapis` because the gRPC Go plugin requires it.
 
 <Spotlight>
 
-## !!steps
+#### !!steps BufGenYaml
 
 Next, create a `buf.gen.yaml` file in the project root with the following content:
 
-```yaml ! buf.gen.yaml
-!from ./assets/gnostic/buf.gen.yaml
+```yaml ! buf.gen.yaml !from ./assets/gnostic/buf.gen.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps ManagedMode
 
 We enable managed mode and set the `go_package_prefix` to `github.com/speakeasy-api/grpc-rest-service/bar`.
 
-```yaml ! buf.gen.yaml
-!from ./assets/gnostic/buf.gen.yaml
+```yaml ! buf.gen.yaml focus=1:7 !from ./assets/gnostic/buf.gen.yaml
 ```
 
 ---
 
-## !!steps
+#### !!steps PluginsSetup
 
 We also specify the plugins we want to use and where to output the generated code.
 
-```yaml ! buf.gen.yaml
-# !focus(9:21)
+```yaml ! buf.gen.yaml focus=9:21 !from ./assets/gnostic/buf.gen.yaml
 ```
 
 </Spotlight>
