--- a/openapi/index.mdx
+++ b/openapi/index.mdx
@@ -3,19 +3,79 @@ title: OpenAPI Reference
 description: Documentation of the OpenAPI Specification
 ---
 
-import { Callout } from "@/mdx/components";
+import { Callout, Spotlight } from "@/mdx/components";
 import { CardGrid } from "@/components/card-grid";
 import { allFrameworkGuidesData } from "@/lib/data/openapi/framework-all-guides";
-
-<Callout title="Contribute to this page">
-  This documentation is Open source. If you have any feedback, suggestions, or
-  want to contribute, check out our [GitHub
-  repo](https://github.com/speakeasy-api/openapi-reference-documentation).
-</Callout>
 
 # OpenAPI Hub
 
 The all in one resource for understanding the OpenAPI Specification.
+
+## OpenAPI Overview
+
+<Spotlight>
+
+#### !!steps Version
+
+The version of the OpenAPI Specification that the document conforms to, should be one of the [supported versions](https://github.com/OAI/OpenAPI-Specification/tree/main/versions).
+
+**Note**: Speakeasy tooling currently only supports OpenAPI Specification versions 3.0.x and 3.1.x.
+
+```yaml ! openapi.yaml focus=1
+!from ./assets/openapi.yaml
+```
+
+#### !!steps Info
+
+Contains information about the document including fields like `title`, `version`, and `description` that help to identify the purpose and owner of the document.
+
+```yaml ! openapi.yaml focus=2:4
+!from ./assets/openapi.yaml
+```
+
+#### !!steps Servers
+
+Contains an optional list of servers the API is available on. If not provided, the default URL is assumed to be `/`, a path relative to where the OpenAPI document is hosted.
+
+```yaml ! openapi.yaml focus=5:7
+!from ./assets/openapi.yaml
+```
+
+#### !!steps Security
+
+Contains an optional list of security requirements that apply to all operations in the API. If not provided, the default security requirements are assumed to be `[]`, an empty array.
+
+```yaml ! openapi.yaml focus=8:9
+!from ./assets/openapi.yaml
+```
+
+#### !!steps Tags
+
+Contains an optional list of tags that are generally used to group or categorize a set of [Operations](/openapi/paths/operations).
+
+```yaml ! openapi.yaml focus=10:12,16:17
+!from ./assets/openapi.yaml
+```
+
+#### !!steps Paths
+
+Contains the paths and operations available within the API.
+
+```yaml ! openapi.yaml focus=13:28
+!from ./assets/openapi.yaml
+```
+
+#### !!steps Components
+
+Contains an optional list of reusable schemas that can be referenced from other parts of the document. This improves the readability and maintainability of the document by allowing common schemas to be defined once and reused in multiple places.
+
+```yaml ! openapi.yaml focus=29:42
+!from ./assets/openapi.yaml
+```
+
+</Spotlight>
+
+---
 
 ## Server Framework Guides
 
@@ -25,129 +85,7 @@ Generate OpenAPI specs from popular server frameworks:
 
 ---
 
-### OpenAPI Overview
-
-{/* <Spotlight> */}
-
-## !!steps \`openapi`
-
-The version of the OpenAPI Specification that the document conforms to, should be one of the [supported versions](https://github.com/OAI/OpenAPI-Specification/tree/main/versions).
-
-**Note**: Speakeasy tooling currently only supports OpenAPI Specification versions 3.0.x and 3.1.x.
-
-```yaml ! openapi.yaml
-# !focus(1)
-openapi: 3.1.0
-info:
-  title: The Speakeasy Bar
-  version: 1.0.0
-servers:
-  - url: https://speakeasy.bar
-    description: The production server
-security:
-  - apiKey: []
-tags:
-  - name: drinks
-    description: Operations related to drinks
-paths:
-  /drinks:
-    get:
-      tags:
-        - drinks
-      operationId: listDrinks
-      summary: Get a list of drinks
-      responses:
-        "200":
-          description: A list of drinks
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Drink"
-components:
-  schemas:
-    Drink:
-      type: object
-      title: Drink
-      properties:
-        name:
-          type: string
-        price:
-          type: number
-  securitySchemes:
-    apiKey:
-      type: apiKey
-      name: Authorization
-      in: header
-```
-
----
-
-## !!steps \`info`
-
-Contains information about the document including fields like `title`, `version`, and `description` that help to identify the purpose and owner of the document.
-
-```yaml ! openapi.yaml
-# !focus(2:4)
-```
-
----
-
-## !!steps \`servers`
-
-Contains an optional list of servers the API is available on. If not provided, the default URL is assumed to be `/`, a path relative to where the OpenAPI document is hosted.
-
-```yaml ! openapi.yaml
-# !focus(5:7)
-```
-
----
-
-## !!steps \`security`
-
-Contains an optional list of security requirements that apply to all operations in the API. If not provided, the default security requirements are assumed to be `[]`, an empty array.
-
-```yaml ! openapi.yaml
-# !focus(8:9)
-```
-
----
-
-## !!steps \`tags`
-
-Contains an optional list of tags that are generally used to group or categorize a set of [Operations](/openapi/paths/operations).
-
-```yaml ! openapi.yaml
-# !focus(10:12,16:17)
-```
-
----
-
-## !!steps \`paths`
-
-Contains the paths and operations available within the API.
-
-```yaml ! openapi.yaml
-# !focus(13:28)
-```
-
----
-
-## !!steps \`components`
-
-Contains an optional list of reusable schemas that can be referenced from other parts of the document. This improves the readability and maintainability of the document by allowing common schemas to be defined once and reused in multiple places.
-
-```yaml ! openapi.yaml
-# !focus(29:42)
-```
-
----
-
-{/* </Spotlight> */}
-
-{/* <Separator className="opacity-10" />
-
+{/*
 <CardsSection
   title="The OpenAPI Ecosystem"
   description="Understand the different specifications that make up the OpenAPI ecosystem"
